src/objects/TaskStreamTask__c.object
<CustomObject>
    <description>Object to hold task status information for students from Task Stream.</description>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <description>Date and time of the task status.</description>
        <label>Activity Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssessmentCode__c</fullName>
        <description>Assessment/Course code to which the task belongs.</description>
        <label>Assessment Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentIDKey__c</fullName>
        <description>Assessment ID Key that the task belongs to.</description>
        <label>Assessment ID Key</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>Student PIDM</description>
        <label>PIDM</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Task status code</description>
        <label>Status</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentCourseRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student Course Registration lookup</description>
        <label>Student Course Registration</label>
        <referenceTo>StudentCourseRegistration__c</referenceTo>
        <relationshipName>Task_Stream_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>Student Contact lookup</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Task_Stream_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskIDKey__c</fullName>
        <description>Unique Task ID key from the Task Stream database table.</description>
        <externalId>true</externalId>
        <label>Task ID Key</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <formula>CASE(Status__c,
&quot;2&quot;,&quot;Author work submitted&quot;,
&quot;4&quot;,&quot;Author work resubmitted&quot;,
&quot;8&quot;,&quot;Author work evaluated&quot;,
&quot;16&quot;,&quot;Author work sent back for revision&quot;,
&quot;32&quot;,&quot;Evaluation started&quot;,
&quot;33&quot;,&quot;Evaluation cancelled&quot;,
&quot;34&quot;,&quot;Evaluation has been taken over by another evaluator (this happens when one evaluator starts an evaluation, then another one completes it)&quot;,
&quot;35&quot;,&quot;Completed evaluation edited&quot;,
&quot;36&quot;,&quot;Evaluation method changed (this is done by administrator, and requires authorization code)&quot;,
&quot;37&quot;,&quot;Work submission cancelled by author (can only happen if evaluation has not yet begun)&quot;,
&quot;38&quot;,&quot;Evaluations suspended, no more addt’l evaluations needed&quot;,
&quot;39&quot;,&quot;Additional evaluation required&quot;,
&quot;40&quot;,&quot;All evaluations have been cancelled&quot;,
&quot;41&quot;,&quot;Reconciliation of evaluations has begun&quot;,
&quot;42&quot;,&quot;Reconciliation of evaluations has been cancelled&quot;,
&quot;43&quot;,&quot;Reconciliation of evaluations has been completed, not released to author&quot;,
&quot;64&quot;,&quot;Evaluation has been released to author&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskStreamAssessment__c</fullName>
        <label>Task Stream Assessment</label>
        <referenceTo>TaskStreamAssessment__c</referenceTo>
        <relationshipName>Task_Stream_Tasks</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskTitle__c</fullName>
        <description>Title of the Task Stream Task</description>
        <label>Task Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Taskstream Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Student__c</columns>
        <columns>TaskStreamAssessment__c</columns>
        <columns>NAME</columns>
        <columns>ActivityDate__c</columns>
        <columns>TaskStatus__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FailedTasksbyStudent</fullName>
        <columns>Student__c</columns>
        <columns>TaskStatus__c</columns>
        <columns>TaskStreamAssessment__c</columns>
        <columns>NAME</columns>
        <columns>ActivityDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>16</value>
        </filters>
        <label>Failed Tasks by Student</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecentActivities</fullName>
        <columns>ActivityDate__c</columns>
        <columns>Student__c</columns>
        <columns>TaskStreamAssessment__c</columns>
        <columns>NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActivityDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:45</value>
        </filters>
        <label>Recent Activities (last 45 Days)</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>StudentsTasksbyAssessmentCode</fullName>
        <columns>TaskStreamAssessment__c</columns>
        <columns>Student__c</columns>
        <columns>ActivityDate__c</columns>
        <columns>NAME</columns>
        <columns>TaskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Students Tasks by Assessment Code</label>
        <sharedTo>
            <group>MentorManagers</group>
            <group>Mentors</group>
            <group>SRMSupport</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Task Stream Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taskstream Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>